fix: broadcast events to all listeners & update angular

--- a/angular-sse/angular.json
+++ b/angular-sse/angular.json
@@ -94,8 +94,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "proxyConfig": "./proxy.conf.json",
-            "browserTarget": "angular-sse:build"
+            "browserTarget": "angular-sse:build",
+            "proxyConfig": "./proxy.conf.json"
           },
           "configurations": {
             "production": {
