--- a/angular-sse/package.json
+++ b/angular-sse/package.json
@@ -3,20 +3,20 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.0-next.0",
-    "@angular/common": "^16.0.0-next.0",
-    "@angular/compiler": "^16.0.0-next.0",
-    "@angular/core": "^16.0.0-next.0",
-    "@angular/forms": "^16.0.0-next.0",
-    "@angular/platform-browser": "^16.0.0-next.0",
-    "@angular/platform-browser-dynamic": "^16.0.0-next.0",
-    "@angular/router": "^16.0.0-next.0",
+    "@angular/animations": "^16.0.0-next.7",
+    "@angular/common": "^16.0.0-next.7",
+    "@angular/compiler": "^16.0.0-next.7",
+    "@angular/core": "^16.0.0-next.7",
+    "@angular/forms": "^16.0.0-next.7",
+    "@angular/platform-browser": "^16.0.0-next.7",
+    "@angular/platform-browser-dynamic": "^16.0.0-next.7",
+    "@angular/router": "^16.0.0-next.7",
     "prettier": "^2.8.7",
     "primeicons": "^6.0.1",
     "primeng": "^15.3.0",
@@ -25,9 +25,9 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.0-next.5",
-    "@angular/cli": "~16.0.0-next.5",
-    "@angular/compiler-cli": "^16.0.0-next.0",
+    "@angular-devkit/build-angular": "^16.0.0-next.7",
+    "@angular/cli": "~16.0.0-next.7",
+    "@angular/compiler-cli": "^16.0.0-next.7",
     "typescript": "~5.0.2"
   }
 }
