--- a/spring-sse/src/main/resources/application.yaml
+++ b/spring-sse/src/main/resources/application.yaml
@@ -1,21 +1,24 @@
 server:
+  port: 8080
   servlet:
     context-path: /api
-    session:
-      timeout: 3600s
-      cookie:
-        max-age: 3600s
+
 spring:
-  main:
-    # the next property is dynamically loaded with gradle instead to avoid conflicts servlet/reactive
-    # web-application-type: reactive
-    allow-bean-definition-overriding: true
-  webflux:
-    base-path: /api
-  datasource:
-    # consult h2 console at http://localhost:8080/h2-console
-    url: jdbc:h2:mem:sse
-    username: user
-  h2:
-    console:
-      enabled: true
+  session:
+    store-type: redis
+    redis:
+      namespace: spring:session
+      flush-mode: on-save
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
