--- a/angular-sse/angular.json
+++ b/angular-sse/angular.json
@@ -94,8 +94,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-sse:build",
-            "proxyConfig": "./proxy.conf.json"
+            "browserTarget": "angular-sse:build"
           },
           "configurations": {
             "production": {
