--- a/angular-sse/package.json
+++ b/angular-sse/package.json
@@ -17,9 +17,10 @@
     "@angular/platform-browser": "^16.0.0-next.7",
     "@angular/platform-browser-dynamic": "^16.0.0-next.7",
     "@angular/router": "^16.0.0-next.7",
+    "@microsoft/fetch-event-source": "^2.0.1",
     "prettier": "^2.8.7",
     "primeicons": "^6.0.1",
-    "primeng": "^15.3.0",
+    "primeng": "^16.0.0-rc.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
