--- a/spring-sse/src/main/resources/application.yaml
+++ b/spring-sse/src/main/resources/application.yaml
@@ -2,17 +2,21 @@ server:
   port: 8080
   servlet:
     context-path: /api
+    session:
+      tracking-modes: cookie
+      cookie:
+        name: SESSION-ID
+        max-age: 1m
+        http-only: true
+        secure: true
+        path: /
+        same-site: none
+      timeout: 1m
 
 spring:
-  session:
-    store-type: redis
-    redis:
-      namespace: spring:session
-      flush-mode: on-save
-  data:
-    redis:
-      host: localhost
-      port: 6379
+  redis:
+    host: localhost
+    port: 6379
 
 management:
   endpoints:
